--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,6 @@ platform = espressif8266
 framework = arduino
 board = d1
 monitor_speed = 115200
-;board_build.filesystem = spiffs
-board_build.filesystem = littlefs
+board_build.filesystem = spiffs
+;board_build.filesystem = littlefs
 ;extra_scripts = pre:extra_script.py
