--- a/platformio.ini
+++ b/platformio.ini
@@ -31,3 +31,5 @@ monitor_speed = 115200
 board_build.filesystem = spiffs
 ;board_build.filesystem = littlefs
 ;extra_scripts = pre:extra_script.py
+lib_deps =
+  IRremoteESP8266@^2.7
